デバック情報追記